src/assets/css/style.css
@charset "UTF-8";

header {
  z-index: 10010
}

.pop-bg {
  z-index: 120
}

.pop-wrap {
  z-index: 129
}

.menu-mask {
  z-index: 115
}

.gotop {
  z-index: 84
}

.float-banner,
.searchpage {
  z-index: 80
}

.launch-game-content {
  z-index: 115
}

.tips-display {
  z-index: 116
}

.loader-box,
.loading-mask {
  z-index: 129
}

.rotating-pop {
  z-index: 130
}

#chat-widget-container {
  z-index: 120 !important
}

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  box-sizing: border-box
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block
}

body {
  line-height: 1
}

ol,
ul {
  list-style: none
}

blockquote,
q {
  quotes: none
}

blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none
}

table {
  border-collapse: collapse;
  border-spacing: 0
}

* {
  outline: none
}

select,
input {
  border-radius: 0;
  -webkit-appearance: none;
  appearance: none
}

input[type=number] {
  -moz-appearance: textfield
}

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0
}

.gotop {
  display: none;
  opacity: 0;
  background: linear-gradient(180deg, #3976ff 0%, #054ea1 100%)
}

.gotop.is-visible {
  display: block;
  animation: gotopShow .3s linear forwards;
  opacity: 0
}

@keyframes gotopShow {
  0% {
    opacity: 0
  }

  to {
    opacity: 1
  }
}

.s-app {
  font-family: "Source Sans 3", sans-serif;
  line-height: 1;
  touch-action: manipulation;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;
  font-feature-settings: normal;
  overflow: -moz-scrollbars-none;
  -ms-overflow-style: none;
}

.gotop:before,
.gotop:after {
  content: "";
  position: absolute;
  top: 35%;
  left: 47%;
  width: 3px;
  height: 15px;
  border-radius: .5333333333vw;
  background: #ffffff
}

.gotop:before {
  margin-left: 2px;
  transform: rotate(40deg);
  transform-origin: top left
}

.gotop:after {
  margin-right: 2px;
  transform: rotate(-40deg);
  transform-origin: top right
}

.gotop.gotop-index {
  right: 0;
  bottom: 0;
  transform: scale(.7)
}

.gotop.bottom-1 {
  bottom: 10px
}

.gotop.bottom-2 {
  bottom: 78px
}

.gotop.bottom-3 {
  bottom: 146px
}

.gotop.bottom-4 {
  bottom: 214px
}

.gotop {
  position: fixed;
  right: 2.6666666667vw;
  bottom: 5.3333333333vw;
  width: 13.3333333333vw;
  height: 13.3333333333vw;
  transition: all .3s ease-in;
  border-radius: 50%;
  background: linear-gradient(180deg, #3976ff 0%, #054ea1 100%);
  box-shadow: 0 3.2vw 2.6666666667vw #281a7021, inset 0 .2666666667vw .8vw #ffffff80;
  color: #fff
}

.menu-mask {
  display: none;
  position: fixed;
  top: 0;
  width: 100%;
  height: 100%;
  opacity: 1;
  background-color: #00000080;
  -webkit-backdrop-filter: blur(2.1333333333vw);
  backdrop-filter: blur(2.1333333333vw)
}

.menu {
  display: none;
  position: fixed;
  z-index: 116;
  top: 0;
  left: -100%;
  width: 100%;
  height: 100%;
  overflow-x: hidden;
  overflow-y: auto;
  /* transform: translateX(-100%); */
  -webkit-overflow-scrolling: touch;
}

.menu.active {
  animation: slideIn 0.7s forwards;
  display: flex;
  transition-delay: .6s;
}

@keyframes slideIn {
  0% {
    left: -100%;
  }

  100% {
    left: 0%;
  }
}

.main-box li {
  opacity: 0;
  transform: translate(0px, 20px);
}

.menu.active .main-box li,
.menu.active .menu-first .menu-item .home-box {
  animation: slideUP 0.6s forwards;
  animation-delay: var(--delay);
}

.menu.active .main-box li:nth-child(1) {
  --delay: 0.4s;
}

.menu.active .main-box li:nth-child(2) {
  --delay: 0.4s;
}

.menu.active .main-box li:nth-child(3) {
  --delay: 0.4s;
}

.menu.active .main-box li:nth-child(4) {
  --delay: 0.4s;
}

.menu.active .main-box li:nth-child(5) {
  --delay: 0.5s;
}

.menu.active .main-box li:nth-child(6) {
  --delay: 0.6s;
}

.menu.active .main-box li:nth-child(7) {
  --delay: 0.7s;
}

.menu.active .main-box li:nth-child(8) {
  --delay: 0.8s;
}

.menu.active .main-box li:nth-child(9) {
  --delay: 0.9s;
}

.menu-first .menu-item .home-box {
  opacity: 0;
  transform: translate(0px, 20px);
}

.menu.active .menu-first .menu-item .home-box {
  --delay: 1s;
}

@keyframes slideUP {
  0% {
    transform: translate(0px, 20px);
    opacity: 0;
  }

  50% {
    opacity: 0.9;
  }

  100% {
    transform: translate(0px, 0%);
    opacity: 1;
  }
}

.menu.active .btn-close {
  position: absolute;
  z-index: 117;
  top: 0;
  right: 0;
  width: 10.6666666667vw;
  height: 10.6666666667vw;
  animation: closeshow .6s .6s cubic-bezier(.25, .46, .45, .94) both;
  background: #ffffff;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
  -webkit-mask-position: center;
  mask-position: center;
  -webkit-mask-size: 50%;
  mask-size: 50%
}

@keyframes closeshow {
  0% {
    opacity: 0
  }

  to {
    opacity: 1
  }
}

.menu-first {
  /* position: relative; */
  top: 10.6666666667vw;
  left: 2.1333333333vw;
  z-index: 116;
  height: -moz-fit-content;
  height: fit-content
}

.menu-first .beforelogin,
.menu-first .afterlogin {
  width: 100%;
  height: 16vw;
  margin: 0;
  border-radius: 0 0 2.6666666667vw 2.6666666667vw;
  background: #ffb80c;
  box-shadow: none
}

.menu-first .beforelogin a {
  padding: 0;
  background: transparent;
  box-shadow: none;
  color: #0e2749;
  text-shadow: 0 0 .8vw #ffd259
}
/* ... */

